--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,14 +3,17 @@ layout: default
 ---
 <main id="main" class="mb-5">
     {%- if page.title %}
-    <h1>{{ page.title }}
-        <div class="btn-group">
-            {%- if page.custom-editme %}
-            <a role="button" data-bs-toggle="tooltip" title="Propose changes to the content of this page on GitHub" href="{{site.github.repository_url}}/blob/master/{{page.custom-editme}}" class="btn hover-primary text-primary"><i class="fas fa-pencil-alt"></i></a>
-            {%- else %}
-            <a role="button" data-bs-toggle="tooltip" title="Propose changes to this page on GitHub"  href="{{site.github.repository_url}}/blob/master/{{page.path}}" class="btn hover-primary text-primary"><i class="fas fa-pencil-alt"></i></a>
-            {%- endif %}
-            <a role="button" data-bs-toggle="tooltip" title="Check out the history of this page" href="{{site.github.repository_url}}/commits/master/{{page.path}}" class="btn hover-primary text-primary"><i class="fas fa-history"></i></a>
+    <h1 class="d-flex justify-content-between">{{ page.title }}
+        <div class="d-flex align-items-center">
+            <div class="btn-group">
+                {%- if page.custom-editme %}
+                <a role="button" data-bs-toggle="tooltip" title="Propose changes to the content of this page on GitHub" href="{{site.github.repository_url}}/blob/master/{{page.custom-editme}}" class="btn hover-primary text-primary"><i class="fas fa-pencil-alt"></i></a>
+                {%- else %}
+                <a role="button" data-bs-toggle="tooltip" title="Propose changes to this page on GitHub"  href="{{site.github.repository_url}}/blob/master/{{page.path}}" class="btn hover-primary text-primary"><i class="fas fa-pencil-alt"></i></a>
+                {%- endif %}
+                <a role="button" data-bs-toggle="tooltip" title="Check out the history of this page" href="{{site.github.repository_url}}/commits/master/{{page.path}}" class="btn hover-primary text-primary"><i class="fas fa-history"></i></a>
+            </div>
+            <span class="text-muted fs-6">{% last_modified_at %}</span>
         </div>
     </h1>
     {%- endif %}
